feat: migrated to cloud, added docker, added housePicture, LotBlock, LotHistory, LotHouse, LotType, Reservation, ReservationApproval, ReservationChecklist, ReservationDocument, ReservationHistory, ReservationLot, ReservationHouse